feat(cmds): /rps
This command is a minigame type, and you can challenge other players to play a game of Rock, Paper, Scissors! This is one of the first minigames made on this bot. Further updates and changes expected on this command, thanks!

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is Pico, a bot to have fun with, nothing else!",
   "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src",
     "test": "node src"
   },
   "repository": {
@@ -25,6 +26,9 @@
   "dependencies": {
     "discord.js": "^14.12.1",
     "dotenv": "^16.4.4",
-    "pagination.djs": "^4.0.13"
+    "pagination.djs": "^4.0.14"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
