ci(tests): nodejs test workflow
This is a small commit to automate format checking problems.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src",
-    "test": "node src",
+    "preview": "node src",
+    "test": "npm run lint && exit 0",
     "lint": "eslint .",
     "fix": "eslint . --fix"
   },
